--- a/03-graficacion/.vscode/settings.json
+++ b/03-graficacion/.vscode/settings.json
@@ -3,5 +3,9 @@
     "terminal.integrated.env.windows": {
         "PYTHONPATH": "${workspaceFolder};${env:PYTHONPATH}",
         "PATH": "${workspaceFolder};${env:PATH}"
-    }
+    },
+    "editor.fontSize": 14,
+    "editor.fontWeight":"normal",
+    "terminal.integrated.fontSize": 14,
+    "window.zoomLevel": 0,
 }
